linter/src/rules/snapshots/squawk_linter__rules__ban_concurrent_index_creation_in_transaction__test_rules__adding_index_concurrently_in_transaction-2.snap
---
source: linter/src/rules/ban_concurrent_index_creation_in_transaction.rs
expression: lint_sql(ok_sql)
---
[]
