linter/src/rules/snapshots/squawk_linter__rules__ban_concurrent_index_creation_in_transaction__test_rules__adding_index_concurrently_in_transaction_with_assume_in_transaction.snap
---
source: linter/src/rules/ban_concurrent_index_creation_in_transaction.rs
expression: lint_sql_assuming_in_transaction(bad_sql)
---
[
    RuleViolation {
        kind: BanConcurrentIndexCreationInTransaction,
        span: Span {
            start: 0,
            len: Some(
                92,
            ),
        },
        messages: [
            Note(
                "Concurrent index creation is not allowed inside a transaction.",
            ),
            Help(
                "Build the index outside any transactions.",
            ),
        ],
    },
]
