linter/src/rules/snapshots/squawk_linter__rules__ban_concurrent_index_creation_in_transaction__test_rules__adding_index_concurrently_in_transaction_with_assume_in_transaction_but_outside.snap
---
source: linter/src/rules/ban_concurrent_index_creation_in_transaction.rs
expression: lint_sql_assuming_in_transaction(ok_sql)

---
[]
